--- a/build.properties
+++ b/build.properties
@@ -1,4 +1,4 @@
-project.name=PHP-Webcam-Overlay
+project.name=PHP_Webcam_Overlay
 project.channel=pear.random-host.com
 project.majorVersion=0
 project.minorVersion=1
