fix depency name randomhost/PHP_Image

--- a/package.xml
+++ b/package.xml
@@ -57,9 +57,9 @@
                 <max>3.999.9999</max>
             </package>
             <package>
-                <name>PHP-Image</name>
+                <name>PHP_Image</name>
                 <channel>pear.random-host.com</channel>
-                <min>1.0.0</min>
+                <min>0.1.0</min>
                 <max>1.999.9999</max>
             </package>
         </required>
