--- a/build.properties
+++ b/build.properties
@@ -1,8 +1,9 @@
 project.name=PHP_Webcam_Overlay
 project.channel=pear.random-host.com
 project.majorVersion=0
-project.minorVersion=1
+project.minorVersion=2
 project.patchLevel=0
+project.stability=alpha
 project.snapshot=true
 
 checkstyle.standard=PEAR
