SPDX compliant license
* update license to comply with SPDX

--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
         "Webcam"
     ],
     "homepage": "https://www.random-host.com",
-    "license": "New-BSD",
+    "license": "BSD-3-Clause",
     "authors": [
         {
             "name": "Ch'Ih-Yu",
