--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
         "Image",
         "Webcam"
     ],
-    "homepage": "https://www.random-host.com",
+    "homepage": "https://github.random-host.tv",
     "license": "BSD-3-Clause",
     "authors": [
         {
@@ -16,21 +16,27 @@
     ],
     "config": {
         "platform": {
-            "php": "5.3.3"
+            "php": "7.3.31"
         }
     },
     "require": {
-        "php": ">=5.3.0",
-        "randomhost/image": "~1.0"
+        "php": ">=7.3.0",
+        "randomhost/image": "~2.0"
     },
     "require-dev": {
-        "behat/behat": "~2.0",
-        "phpunit/phpunit": "~4.0",
-        "phpspec/phpspec": "~2.4"
+        "phpunit/phpunit": "~9.0"
     },
     "autoload": {
         "psr-4": {
             "randomhost\\Image\\Webcam\\": "src/php/"
         }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "randomhost\\Image\\Webcam\\Tests\\": "src/tests/php"
+        }
+    },
+    "scripts": {
+        "test": "vendor/bin/phpunit"
     }
 }
